# Compiler-Lab

./: .clangd  .gitignore  CMakeLists.txt  README.md
grammar/: SLR1ConflictReslove.txt  backup.txt  grammar.txt  terminal.txt  test.txt
include/: DFA.h  Semantic.h  SyntaxType.h  asmBase.h  asmGen.h  fileIO.h  irGen.h  lcmpfileio.h  lexer.h  parserGen.h  programSymbolTable.h  stringUtil.h  templateUtil.h  test.h
include/AST/: AST.h
include/AST/NodeType/: ASTBool.h  ASTbaseType.h  Arg.h  Declare.h  Expr.h  NodeBase.h  Param.h  Program.h  Stmt.h  Type.h  TypingSystem.h
src/: Semantic.cpp  SyntaxType.cpp  fileIO.cpp  grammarRead.cpp  irGen.cpp  irOptimize.cpp  lexer.cpp  main.cpp  mylex.cpp  parserGen.cpp  stringUtil.cpp  x64asmGen.cpp
src/AST/: AST.cpp
src/AST/NodeType/: ASTbaseType.cpp  Declare.cpp  Expr.cpp  Param.cpp  Program.cpp  Stmt.cpp
